--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,75 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+    width: 100%;
+    height: 100vh;
+    margin: 0px;
+    overflow: auto;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #2C3E50;
+}
+
+@font-face {
+    font-family: 'Lato';
+
+    src: url(/assets/fonts/Lato-Regular.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: 'Lato-Bold';
+    src: url(/assets/fonts/Lato-Bold.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: 'Lato-Thin';
+    src: url(/assets/fonts/Lato-Thin.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: 'Lato-Black';
+    src: url(/assets/fonts/Lato-Black.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: 'Lato-Light';
+    src: url(/assets/fonts/Lato-Light.ttf) format("truetype");
+}
+
+// Scrollbar Style - Starts Here
+
+::-webkit-scrollbar {
+    width: 16px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #dadce0;
+    background-clip: padding-box;
+    border: 4px solid transparent;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+::-webkit-scrollbar-track {
+    background: none;
+    border: none;
+}
+
+// Scrollbar Style - Ends Here
+
+:root {
+    --primary-green: #358842;
+    --primary-red: #a00204;
+    --primary-yellow: #F89406;
+    --primary-blue: #2F96B4;
+    --headings-color: #2C3E50;
+    --font-color: #000000;
+}
